--- a/style.css
+++ b/style.css
@@ -51,13 +51,15 @@ body{
 }
 
 .film {
-    width: 200px;
+    width: 50vh;
+    height : 400px;
     padding: 10px;
     margin: 10px;
     color: white;
     border: 1px solid white;
     background-color: black;
     list-style-type: none;
+    overflow-y: scroll;
 }
 .bandierina{
     height: 20px;
@@ -66,4 +68,7 @@ body{
 
 .copertina {
     width: 100%;
+}
+.container {
+    margin: auto;
 }
